<resources>
    <string name="app_name">VersityBD</string>
    <string name="du_info">The University of Dhaka (Bengali: ঢাকা বিশ্ববিদ্যালয়, also known as Dhaka University or simply DU) is the oldest university in modern Bangladesh. The university is ranked number one on the Bangladesh University Ranking 2017.[4] Established in 1921 during the British Raj, it has made significant contributions to the modern history of Bangladesh.[5][6][7][8] After the Partition of India, it became the focal point of progressive and democratic movements in Pakistan. Its students and teachers played a central role in the rise of Bengali nationalism and the independence of Bangladesh.</string>
    <string-array name="university_tye">

        <item>Public University</item>
        <item>Private University</item>
        <item>National University</item>

    </string-array>
    <string-array name="public_university">
        <item> Dhaka University </item>

        <item> Jagannath University </item>
        <item> Jahangirnagar University </item>
        <item> BUET </item>
    </string-array>
    <string-array name="du_department">
        <item>Faculty of Arts</item>
        <item>Faculty of Business Studies</item>
        <item>Faculty of Biological Science</item>
        <item>Faculty of Engineering and Technology</item>
        <item>Faculty of Education</item>
        <item>Faculty of Law</item>
        <item> Faculty of Fine Arts</item>
        <item>Faculty of Medicine</item>
        <item>Faculty of Pharmacy</item>
        <item>Faculty of Science</item>
        <item>Faculty of Social Sciences</item>
        <item>Faculty of Earth and Environmental Sciences</item>

    </string-array>
    <string name="jnu_about">
        The university has a history that started in 1858 when Dhaka Brahma School was founded by Dinanath Sen, Prabhaticharan Roy, Anathbandhu Mallik and Brajasundar Kaitra. The name Jagannath School was given by Kishorilal Chowdhury, the Zamindar of Baliati in Manikganj, who took over the school in 1872 and renamed it after his father.
In 1884, it was raised to a second grade college. Law was one of the first courses introduced. A common management committee administered the school and college until 1887, when the school section was separated to form the independent Kishore Jubilee School. It is now known as K L Jubilee School. The administration of the college was transferred to a board of trustees in 1907. In the following year, it became a first grade college.
    </string>
    <string name="jnu_department">
        Faculty of Arts,
        Faculty of Science,
        Faculty of Social Science,
        Faculty of Business Studies,
        Faculty of Law,
        Faculty of Life and Earth Sciences,
        Institute of Modern Language,
        Institute of Education and Research,
    </string>
    <string name="jnu_admission">

Interested candidates have to passed SSC or equivalent examination in 2015 2016,
Interested candidates have to passed HSC or equivalent examination in 2018
Unit -1: Science ⇒ For General Science, Alim Science, Vocational Science ⇒ interested candidates have to get total CGPA 8.00 in SSC or equivalent examination  HSC or equivalent examination both. And have to get individually at least CGPA 3.00 in SSC  HSC examination both.

Unit -2: Humanities ⇒ For Humanities, Music, Home Economics, Marsahsa (General), Madrasha (Mujabibod) ⇒ interested candidates have to get total CGPA 7.50 in SSC or equivalent examination  HSC or equivalent examination both. And have to get individually at least CGPA 3.00 in SSC  HSC examination both.

Unit -3: Business Studies ⇒ For Commerce, Diploma in Business Studies, Business management, Diploma in Course ⇒ interested candidates have to get total CGPA 8.00 in SSC or equivalent examination  HSC or equivalent examination both. And have to get individually at least CGPA 3.00 in SSC  HSC examination both.
    </string>
    <string name="du_admittion_date">

   আবেদনের শেষ তারিখ: ২৮ আগস্ট, ২০১৮ (দুপুর ২:০০ টা)
    টাকা জমা দেয়ার শেষ তারিখ: ২৮ অগাস্ট, ২০১৮ (বিকাল ৪:০০ টা )
    ক-ইউনিট পরীক্ষা: ২৮ সেপ্টেম্বর, ২০১৮ (সকাল ১০:০০টা)
    খ-ইউনিট পরীক্ষা: ২১ সেপ্টেম্বর, ২০১৮ (সকাল ১০:০০টা)
    গ-ইউনিট পরীক্ষা: ১৪ সেপ্টেম্বর, ২০১৮ (সকাল ১০:০০টা)
    ঘ-ইউনিট পরীক্ষা: ১২ অক্টোবর, ২০১৮ (সকাল ১০:০০টা)
    চ -ইউনিট পরীক্ষা (সাধারণ জ্ঞান ): ১৫ সেপ্টেম্বর, ২০১৮ (সকাল ১০:০০টা)
    চ -ইউনিট পরীক্ষা (অংকন): ২২ সেপ্টেম্বর, ২০১৮ (সকাল ১০:০০টা)

    </string>
    <string name="juha_about">
        Jahangirnagar University (Bengali: জাহাঙ্গীরনগর বিশ্ববিদ্যালয় Jahangirnôgôr Bishwôbidyalôy, University Acronym: জাবি or JU) is a public university in Bangladesh, based in Savar Upazila, Dhaka.[2] It is the only fully residential[3] university in Bangladesh.[2]

The university was established in 1970 by the Jahangirnagar Muslim University Ordinance of the government of Pakistan. Its first vice-chancellor, Mafiz Uddin Ahmad (PhD in chemistry, University of Illinois, Chicago) took up office on 24 September 1970. The first group of students, a total of 150, were enrolled in four departments: Economics, Geography, Mathematics, and Statistics. Its formal inauguration was delayed until 12 January 1971, when the university was launched by Rear Admiral S. M. Ahsan, the chancellor.

It operated as a project until 1973, when the 'Jahangirnagar Muslim University Act' was amended as the 'Jahangirnagar University Act'.

In 2014, the university had 16,781 students, 755 teachers, and 1,430 other employees. On 2 March 2014, Farzana Islam, a professor of the Anthropology Department, was appointed the vice-chancellor of JU, marking the country's first woman to hold the position.
    </string>
    <string name="juha_department">

Department of physics

Old arts building

Department of Chemistry


Faculty of Mathematical and Physical Science

Department of Computer Science and Engineering
Department of Environmental sciences
Department of Physics
Department of Chemistry
Department of Statistics
Department of Mathematics
Department of Geological Science
Faculty of Biological Science

Department of Botany
Department of Zoology
Department of Biochemistry Molecular Biology
Department of Microbiology
Department of Pharmacy
Department of Public Health  Informatics
Department of Biotechnology Genetic Engineering (www.bgeju.edu.bd)

Faculty of Business Studies
Faculty of Social Science

Department of Anthropology
Department of Economics
Department of Government and Politics[13]
Department of Geography and Environment
Department of Public Administration
Department of Urban and Regional Planning
Faculty of Arts and Humanities

Department of Archaeology
Department of Bangla
Department of Drama and Dramatics
Department of English[14]
Department of Fine Arts
Department of History
Department of International Relations
Department of Journalism Media Studies
Department of Philosophy
Faculty of Business Studies

Department of Accounting and Information Systems
Department of Finance  Banking
Department of Marketing
Department of Management Studies
Faculty of Law

Department of Law  Justice
    </string>
    <string name="dcom_about">
        Dhaka Commerce College (Bengali: ঢাকা কমার্স কলেজ) is a masters level college in Mirpur, Dhaka, Bangladesh. Established in 1989, it was the first college in Dhaka city to specialise in commerce.[1] Students receive education both in Bangla and English medium. The main founder of this college is professor Kazi Nurul Islam Faruky.

The chairman of the college is professor Shafiq Ahmed Siddique.
    </string>
    <string name="dcom_department">
            Department of Accounting
    Department of Bengali
    Department of Commercial Geography
    Department of Economics
    Department of English
    Department of Finance
    Department of Management Studies
    Department of Marketing
    Department of Secretarial and Office Management
    Department of Statistics and Computer
    </string>
    <string name="dcom_admission">
        Dhaka Commerce College (DCC) is well reputed private college established on 1 July 1989 at Mirpur, Dhaka of Bangladesh. Dhaka Commerce College (DCC) has awarded as the best College for twice by the People’s Republic of Bangladesh.  More than 80% of the students of Dhaka Commerce College achieve first class in Honours and Masters examinations under National University.
After starting of DCC academic activities, If consider the HSC result Dhaka Commerce College was placed in the top 10 colleges in the country. Not only that but olso, National University (NU) of Bangladesh listed the college in top five colleges as the best among 685 in the country for its outstanding performances.

    </string>
    <string name="tips_du_bangla">
Analyzing the questions of university admission tests in past years, it has been found that several questions come from prose and poems. In that case, it is necessary to know about the main issues of prose, the identity of prose writer, his literary works, biography etc. So also for poetry. Novel Padma Nadir Majhi or drama Bloody desert from parts of the question for parebyakarana language, Bengali language, grammar, words, Repeater, Christmas and Easter, joints, division, number, word contraction, Idioms, prefix, suffix important issues. They need good practice.
    </string>
    <string name="tips_du_english">
        In the university admission tests, the emphasis is placed on the grammar in English. In this case, parts of speech, article, tense, voice, narration, correction, right form of verbs, translation, synonyms, antonyms, transformation of sentences, joining sentence, comprehension etc. should be read well. As well as English poets and writers, especially those whose writings are in the HSC syllabus, they should also keep in mind the details of their lives and literary works, writing topics, quotes etc.
    </string>
    <string name="tips_jogonnath_viba">
        Some tips about the viva of IBA-JU

Sobar e janar kotha tao arekbar boli, admission test er 100 marks er count hoy 40 SSC r HSC er result er theke, 55 written exam r baki 5 viva. Written e jara selected tader congrats, jodio ei ovinondon modhur lagar kotha na vivar tension e, Jodi na hoy!!
IBA-JU te admission test viva add hoise last year theke and nijer r baki der experience theke jani eta niye asole tension er kichu nai. Tension thake ‘ki jigges korbe’, ‘jodi na pari’ ei type jinis gula niye. Sei tension komanor jonnoi ei post.

Ki jigges kore: emon sob question normally jigges korte pare jeta asole tumi e sobceye valo jano. Mane tomar personal question. Dekha hoy ei question gular answer kivabe smartly dite parteso. And obossoi smart hote giye over smart hoyar try korona, setar result ulta hobe. Echara desh bidesher recent topic gular upor idea rakhte paro, egula jigges korle jeno matha culkate na hoy. Jai jigges koruk normally handle korar try koro.

Dress code: vivar dress ekkebare formal hobe.
Chelera shirt, pant, shoe r tie. Shirt halka colour howa valo. Setar sathe manay emon pant, tie r shoe. Tie jeno beshi boro ba choto na hoye thake. Belt touch kore thakata tie er normal length.
Meye der salwar kamij porlei hobe. Halka colour r simple design howa valo.
Vivar somoy nervous hoyo na, ja paro confidently bolo, ja paro na ta sorry bole boledao paro na.

Hope you will get success and become a part of the 23rd batch of IBA-JU. We are waiting to welcome you to the IBA-JU family.

P.S. Usually banglish e likhi na,but ekta page e bangla support kore emon device sobar nao thakte pare. Karo porte problem hole my sincerest apology.
    </string>
</resources>