<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/background2"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Dhaka Commerce Collage"
            android:layout_margin="9dp"
            android:textSize="29dp"
            android:textStyle="bold"
            android:textColor="#000"
            android:background="#93698dbc"
            android:layout_gravity="center"/>


        <TextureView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="horizontal">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:padding="10dp"
                    android:layout_marginTop="10dp"

                    android:src="@drawable/na_dh_commercecollage"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:textColor="#000000"
                    android:textStyle="normal"
                    android:textSize="10dp"
                    android:fitsSystemWindows="true"
                    android:layout_marginTop="5dp"
                    android:text="@string/dcom_about" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#979494"
                    android:text="Image GAlary"
                    android:textColor="#000"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:src="@drawable/dcom_pic1"
                    android:scaleType="fitXY"
                    />
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:src="@drawable/dcom_pic2"
                    android:scaleType="fitXY"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="Depepartment"
                    android:padding="10dp"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:textColor="#000000"
                    android:background="#999b9c"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/dcom_department"/>
                </LinearLayout>



                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="Admission"
                    android:padding="10dp"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:textColor="#000000"
                    android:background="#999b9c"
                    />
                <TextView
                    android:padding="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dcom_admission"
                    />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="Admission Circular"
                    android:shadowColor="@color/colorPrimaryDark"
                    android:textStyle="bold"
                    android:padding="10dp"

                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    />


                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="10dp"
                    android:text="Website"
                    android:textStyle="bold" />




            </LinearLayout>


        </LinearLayout>
    </LinearLayout>
</ScrollView>